// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RemoteClusterTable renders a row for a default remote cluster 1`] = `
<tr
  class="euiTableRow euiTableRow-isSelectable euiTableRow-hasActions"
>
  <td
    class="euiTableRowCellCheckbox"
  >
    <div
      class="euiTableCellContent"
    >
      <div
        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
      >
        <input
          aria-label="Select this row"
          class="euiCheckbox__input"
          data-test-subj="checkboxSelectRow-Default remote cluster"
          id="_selection_column_Default remote cluster-checkbox"
          type="checkbox"
        />
        <div
          class="euiCheckbox__square"
        />
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Name"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <button
        class="euiLink euiLink--primary"
        type="button"
      >
        Default remote cluster
      </button>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Seeds"
  >
    <div
      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
    >
      seed, seed2
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connection"
    width="160px"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <svg
            class="euiIcon euiIcon--medium euiIcon--danger"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <path
                d="M7.293 8l-4.147 4.146a.5.5 0 0 0 .708.708L8 8.707l4.146 4.147a.5.5 0 0 0 .708-.708L8.707 8l4.147-4.146a.5.5 0 0 0-.708-.708L8 7.293 3.854 3.146a.5.5 0 1 0-.708.708L7.293 8z"
                id="cross-a"
              />
            </defs>
            <use
              fill-rule="nonzero"
              href="#cross-a"
            />
          </svg>
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiText euiText--medium"
          >
            Not connected
          </div>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connected nodes"
    width="160px"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      />
    </div>
  </td>
  <td
    class="euiTableRowCell euiTableRowCell--hasActions"
  >
    <div
      class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--showOnHover euiTableCellContent--overflowingContent"
    >
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-label="Delete remote cluster"
            class="euiButtonIcon euiButtonIcon--danger"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                  id="trash-a"
                />
              </defs>
              <use
                href="#trash-a"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <a
            aria-describedby="my-id"
            aria-label="Edit remote cluster"
            class="euiButtonIcon euiButtonIcon--primary"
            href="#/management/elasticsearch/remote_clusters/edit/Default remote cluster"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M12.148 3.148L11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998zM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1zM5 14H2v-3l3 3z"
                  id="pencil-a"
                />
              </defs>
              <use
                href="#pencil-a"
              />
            </svg>
          </a>
        </span>
      </div>
    </div>
  </td>
</tr>
`;

exports[`RemoteClusterTable renders a row for a remote cluster defined in elasticsearch.yml 1`] = `
<tr
  class="euiTableRow euiTableRow-isSelectable euiTableRow-hasActions"
>
  <td
    class="euiTableRowCellCheckbox"
  >
    <div
      class="euiTableCellContent"
    >
      <div
        class="euiCheckbox euiCheckbox--inList euiCheckbox--noLabel"
      >
        <input
          aria-label="Select this row"
          class="euiCheckbox__input"
          data-test-subj="checkboxSelectRow-Remote cluster in elasticsearch.yml"
          disabled=""
          id="_selection_column_Remote cluster in elasticsearch.yml-checkbox"
          type="checkbox"
        />
        <div
          class="euiCheckbox__square"
        />
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Name"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <button
            class="euiLink euiLink--primary"
            type="button"
          >
            Remote cluster in elasticsearch.yml
          </button>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <span
            class="euiToolTipAnchor"
          >
            <svg
              aria-describedby="my-id"
              aria-label="Info"
              class="euiIcon euiIcon--medium euiIcon--subdued"
              focusable="true"
              height="16"
              tabindex="0"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.3 10.717H6.7v-4h1.6v4zm-1.6-5.71a.83.83 0 0 1 .207-.578c.137-.153.334-.229.59-.229.256 0 .454.076.594.23.14.152.209.345.209.576 0 .228-.07.417-.21.568-.14.15-.337.226-.593.226-.256 0-.453-.075-.59-.226a.81.81 0 0 1-.207-.568zM7.5 13A5.506 5.506 0 0 1 2 7.5C2 4.467 4.467 2 7.5 2S13 4.467 13 7.5 10.533 13 7.5 13m0-12a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Seeds"
  >
    <div
      class="euiTableCellContent euiTableCellContent--truncateText euiTableCellContent--overflowingContent"
    >
      seed, seed2
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connection"
    width="160px"
  >
    <div
      class="euiTableCellContent euiTableCellContent--overflowingContent"
    >
      <div
        class="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
        >
          <svg
            class="euiIcon euiIcon--medium euiIcon--danger"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xlink="http://www.w3.org/1999/xlink"
            xmlns="http://www.w3.org/2000/svg"
          >
            <defs>
              <path
                d="M7.293 8l-4.147 4.146a.5.5 0 0 0 .708.708L8 8.707l4.146 4.147a.5.5 0 0 0 .708-.708L8.707 8l4.147-4.146a.5.5 0 0 0-.708-.708L8 7.293 3.854 3.146a.5.5 0 1 0-.708.708L7.293 8z"
                id="cross-a"
              />
            </defs>
            <use
              fill-rule="nonzero"
              href="#cross-a"
            />
          </svg>
        </div>
        <div
          class="euiFlexItem"
        >
          <div
            class="euiText euiText--medium"
          >
            Not connected
          </div>
        </div>
      </div>
    </div>
  </td>
  <td
    class="euiTableRowCell"
    data-header="Connected nodes"
    width="160px"
  >
    <div
      class="euiTableCellContent"
    >
      <span
        class="euiTableCellContent__text"
      />
    </div>
  </td>
  <td
    class="euiTableRowCell euiTableRowCell--hasActions"
  >
    <div
      class="euiTableCellContent euiTableCellContent--alignRight euiTableCellContent--showOnHover euiTableCellContent--overflowingContent"
    >
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-label="Remote clusters defined in elasticsearch.yml can't be deleted"
            class="euiButtonIcon euiButtonIcon--danger"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M11 3h5v1H0V3h5V1a1 1 0 0 1 1-1h4a1 1 0 0 1 1 1v2zm-7.056 8H7v1H4.1l.392 2.519c.042.269.254.458.493.458h6.03c.239 0 .451-.189.493-.458l1.498-9.576H14l-1.504 9.73c-.116.747-.74 1.304-1.481 1.304h-6.03c-.741 0-1.365-.557-1.481-1.304l-1.511-9.73H9V5.95H3.157L3.476 8H8v1H3.632l.312 2zM6 3h4V1H6v2z"
                  id="trash-a"
                />
              </defs>
              <use
                href="#trash-a"
              />
            </svg>
          </button>
        </span>
      </div>
      <div
        class="euiTableCellContent__hoverItem"
      >
        <span
          class="euiToolTipAnchor"
        >
          <button
            aria-describedby="my-id"
            aria-label="Remote clusters defined in elasticsearch.yml can't be edited"
            class="euiButtonIcon euiButtonIcon--primary"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiButtonIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M12.148 3.148L11 2l-9 9v3h3l9-9-1.144-1.144-8.002 7.998a.502.502 0 0 1-.708 0 .502.502 0 0 1 0-.708l8.002-7.998zM11 1c.256 0 .512.098.707.293l3 3a.999.999 0 0 1 0 1.414l-9 9A.997.997 0 0 1 5 15H2a1 1 0 0 1-1-1v-3c0-.265.105-.52.293-.707l9-9A.997.997 0 0 1 11 1zM5 14H2v-3l3 3z"
                  id="pencil-a"
                />
              </defs>
              <use
                href="#pencil-a"
              />
            </svg>
          </button>
        </span>
      </div>
    </div>
  </td>
</tr>
`;
